vistas pug de empleados

--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -1,10 +1,14 @@
 doctype html
 html
-    head
-      title Clínica Médica - Salud Integral
-    body
-      h1 Bienvenido a la Clínica Médica - Salud Integral
-      p Selecciona un Módulo:
-      ul
-        li
-          a(href="/pacientes") Pacientes
+  head
+    title Clínica Médica - Salud Integral
+  body
+    h1 Bienvenido a la Clínica Médica - Salud Integral
+    p Selecciona un Módulo:
+    ul
+      li
+        a(href="/pacientes") Pacientes
+      li
+        a(href="/empleados") Empleados
+      li
+        a(href="/insumos") Insumos
