corrección de errores menores en pug y detalles estéticos

--- a/src/views/pacientes/nuevoPaciente.pug
+++ b/src/views/pacientes/nuevoPaciente.pug
@@ -48,7 +48,7 @@ html
 
             div
                 label(for="email") Email:
-                input(type="email" name="email" value=formData.fechaNacimiento)
+                input(type="email" name="email" value=formData.email)
 
             div
                 label(for="obraSocial") Obra Social:
