se actualiza modulo pacientes - se deja comentado acceso restringido a los módulos

--- a/src/views/empleados/dashboard.pug
+++ b/src/views/empleados/dashboard.pug
@@ -1,11 +1,12 @@
-// src/views/empleados/dashboard.pug
 doctype html
 html
-  head
-    title Gestión de Empleados
-  body
-    h1 Gestión de Empleados
-    ul
-      li: a(href="/empleados/listado") Listado de Empleados
-      li: a(href="/empleados/nuevo-empleado") Alta de empleados
-      li: a(href="/") Menú Principal
+    head
+        title Clínica Médica - Salud Integral
+    body
+        h1 Clínica Médica - Salud Integral
+        h2 Gestión de Empleados
+        br
+        ul
+          li: a(href="/empleados/listado") Listado de Empleados
+          li: a(href="/empleados/nuevo-empleado") Alta de empleados
+          li: a(href="/") Menú Principal
