vistas actualizadas de pacientes y de index

--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -4,11 +4,13 @@ html
     title Clínica Médica - Salud Integral
   body
     h1 Bienvenido a la Clínica Médica - Salud Integral
-    p Selecciona un Módulo:
+    h3 Selecciona un Módulo
     ul
       li
         a(href="/pacientes") Pacientes
       li
         a(href="/empleados") Empleados
       li
-        a(href="/insumos") Insumos
+        a(href="/historias") Historias Clínicas
+      li
+        a(href="/tareas") Tareas
