--- a/src/views/empleados/dashboard.pug
+++ b/src/views/empleados/dashboard.pug
@@ -7,6 +7,9 @@ html
         h2 Gestión de Empleados
         br
         ul
-          li: a(href="/empleados/listado") Listado de Empleados
-          li: a(href="/empleados/nuevo-empleado") Alta de empleados
-          li: a(href="/") Menú Principal
+            li 
+                a(href="/empleados/listado") Listado de Empleados
+            li 
+                a(href="/empleados/nuevoEmpleado") Alta de empleados
+            li 
+                a(href="/") Menú Principal
