--- a/src/views/empleados/editarEmpleado.pug
+++ b/src/views/empleados/editarEmpleado.pug
@@ -7,9 +7,12 @@ html
     h2 Gestión de Empleados
     br
     ul
-      li: a(href="/empleados/listado") Listado de Empleados
-      li: a(href="/empleados/nuevo-empleado") Alta de empleados
-      li: a(href="/empleados") Volver al Menú de Gestión de Empleados
+      li 
+        a(href="/empleados/listado") Listado de Empleados
+      li 
+        a(href="/empleados/nuevoEmpleado") Alta de empleados
+      li 
+        a(href="/empleados") Volver al Menú de Gestión de Empleados
     br
 
     h3 Modificación de datos del empleado
@@ -17,7 +20,6 @@ html
     if error
       p(style="color:red")= error
 
-    // Nota: method-override habilita PATCH usando POST + ?_method=PATCH
     form(action=`/empleados/editar/${empleado.id}?_method=PATCH`, method="POST")
       div
         label(for="nombre") Nombre:
@@ -31,7 +33,7 @@ html
         label(for="dni") DNI:
         input(type="text" name="dni" value=(empleado && empleado.dni) readonly)
 
-      // Rol con select
+      //- Rol con select
       div
         label(for="rol") Rol:
         select(name="rol" required)
@@ -39,7 +41,7 @@ html
           each r in ROLES
             option(value=r selected=(empleado && empleado.rol===r))= r
 
-      // Área con select
+      //- Área con select
       div
         label(for="area") Área:
         select(name="area" required)
