--- a/src/views/empleados/editarEmpleado.pug
+++ b/src/views/empleados/editarEmpleado.pug
@@ -66,7 +66,7 @@ html
         label(for="rol") Rol:
         select(name="rol" id="rol" required)
           option(value="" disabled selected=!(empleado && empleado.rol)) Seleccioná un rol
-          each r in ROLES
+          each r in roles
             option(
               value=r
               selected=(empleado && empleado.rol === r)
@@ -77,7 +77,7 @@ html
         label(for="area") Área:
         select(name="area" id="area" required)
           option(value="" disabled selected=!(empleado && empleado.area)) Seleccioná un área
-          each a in AREAS
+          each a in areas
             option(
               value=a
               selected=(empleado && empleado.area === a)
