se actualiza tareas para numero autoincremental y de referencia

--- a/src/views/tareas/editarTarea.pug
+++ b/src/views/tareas/editarTarea.pug
@@ -15,7 +15,7 @@ html
                 a(href="/tareas") Volver al Menú de Gestión de Tareas
         br
 
-        h3 Edición de Tarea ID: #{tarea._id} 
+        h3 Edición de Tarea número: #{tarea.numeroTarea} 
 
         if error
             p(style="color:red")= error
